fix: details marker alignment

--- a/components/01-atoms/details/details.pcss
+++ b/components/01-atoms/details/details.pcss
@@ -36,13 +36,13 @@
     line-height: 1.3;
     font-weight: 600;
     
-    span,
-    > * {
+    > span,
+    > div {
       margin-inline-start: 0.25rem;
+      display: inline;
     }
     
     &::marker {
-      display: inline-block;
       color: var(--details-color-marker);
     }
   }
